[BUG #5410] Mobile: Replace /improve back button image on iOS.
Less improvement mixin.

--- a/framework/source/resource/qx/mobile/css/ios.css
+++ b/framework/source/resource/qx/mobile/css/ios.css
@@ -1567,32 +1567,33 @@ textarea {
   -moz-border-image: url(../icon/ios/toolButton_pressed.png) 0 5 0 5;
 }
 .navigationbar-backbutton {
-  position: relative;
-  overflow: hidden;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  cursor: pointer;
+  background: #50709a;
   width: auto;
   height: 30px;
-  font-family: inherit;
+  color: #ffffff;
+  text-align: center;
+  line-height: 30px;
   font-size: 12px;
   font-weight: bold;
-  line-height: 30px;
+  font-family: Helvetica;
+  position: relative;
+  overflow: visible;
   text-overflow: ellipsis;
   text-decoration: none;
   white-space: nowrap;
   background: none;
-  margin: 0;
   padding: 0 10px;
-  color: white;
   text-shadow: #3e5779 0 -1px 0;
   -webkit-box-shadow: rgba(255, 255, 255, 0.2) 0 1px 0, rgba(0, 0, 0, 0.2) 0 1px 2px inset;
   -moz-box-shadow: rgba(255, 255, 255, 0.2) 0 1px 0, rgba(0, 0, 0, 0.2) 0 1px 2px inset;
   box-shadow: rgba(255, 255, 255, 0.2) 0 1px 0, rgba(0, 0, 0, 0.2) 0 1px 2px inset;
   border: 1px solid #2d3f57;
   border-left: 0;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
   background-image: none;
-  background-color: #50709a;
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #7c97bb), color-stop(50%, #5a7caa), color-stop(51%, #476999), color-stop(100%, #4a6c9b));
   background-image: -webkit-linear-gradient(top, #7c97bb, #5a7caa 50%, #476999 51%, #4a6c9b);
   background-image: -moz-linear-gradient(top, #7c97bb, #5a7caa 50%, #476999 51%, #4a6c9b);
@@ -1600,13 +1601,12 @@ textarea {
 }
 .navigationbar-backbutton.active {
   border-color: #243346;
-  background-image: none;
   background-color: #476489;
+  background-image: none;
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #6b89b2), color-stop(50%, #50709a), color-stop(51%, #476489), color-stop(100%, #3e5779));
   background-image: -webkit-linear-gradient(top, #6b89b2, #50709a 50%, #476489 51%, #3e5779);
   background-image: -moz-linear-gradient(top, #6b89b2, #50709a 50%, #476489 51%, #3e5779);
   background-image: linear-gradient(top, #6b89b2, #50709a 50%, #476489 51%, #3e5779);
-  color: white;
   text-shadow: #364b68 0 -1px 0;
 }
 .navigationbar-backbutton {
@@ -1640,19 +1640,15 @@ textarea {
   border-radius: 0 0 0 2px;
   border-left: 1px solid #2d3f57;
   border-bottom: 1px solid #2d3f57;
-}
-.navigationbar-backbutton:before {
   -webkit-box-shadow: rgba(0, 0, 0, 0.2) 1px 0 0 inset, rgba(0, 0, 0, 0.2) 0 -1px 0 inset;
   -moz-box-shadow: rgba(0, 0, 0, 0.2) 1px 0 0 inset, rgba(0, 0, 0, 0.2) 0 -1px 0 inset;
   box-shadow: rgba(0, 0, 0, 0.2) 1px 0 0 inset, rgba(0, 0, 0, 0.2) 0 -1px 0 inset;
 }
 .navigationbar-backbutton.active:before {
-  background-image: none;
   background-color: #476489;
   border-color: #243346;
-  background-image: -webkit-gradient(linear, 0% 0%, 100% 100%, color-stop(0%, #6b89b2), color-stop(50%, #50709a), color-stop(51%, #476489), color-stop(100%, #3e5779));
+  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #6b89b2), color-stop(50%, #50709a), color-stop(51%, #476489), color-stop(100%, #3e5779));
   background-image: -webkit-linear-gradient(left top, #6b89b2, #50709a 50%, #476489 51%, #3e5779);
-  background-image: -moz-gradient(linear, 0% 0%, 100% 100%, color-stop(0%, #6b89b2), color-stop(50%, #50709a), color-stop(51%, #476489), color-stop(100%, #3e5779));
   background-image: -moz-linear-gradient(left top, #6b89b2, #50709a 50%, #476489 51%, #3e5779);
   background-image: linear-gradient(left top, #6b89b2, #50709a 50%, #476489 51%, #3e5779);
 }
@@ -1707,22 +1703,25 @@ input[type="checkbox"]:checked {
   border: 2px solid #b8b8b8;
 }
 .toolbar-button {
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
+  -webkit-border-radius: 0px;
+  -moz-border-radius: 0px;
+  border-radius: 0px;
+  cursor: pointer;
+  background: none;
+  width: 0;
+  height: 50px;
+  color: #ffffff;
+  text-align: center;
+  line-height: 50px;
+  font-size: 17px;
+  font-weight: bold;
+  font-family: Helvetica;
   -webkit-background-clip: padding-box;
   -moz-background-clip: padding-box;
   background-clip: padding-box;
-  cursor: pointer;
-  font-weight: bold;
-  color: #fff;
-  font: bold 17px Helvetica;
-  height: 50px;
-  text-align: center;
   padding-left: 20px;
   padding-right: 20px;
   overflow: hidden;
-  width: 0;
 }
 .toolbar-button.active {
   font-weight: bolder;
